--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12607,3 +12607,30 @@
   timeWait: 108 mins
   timeBuild: 4 mins
   timeTotal: 112 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.14-6
+  taskId: 61555938
+  timeCreate: Wed May 29 19:24:45 2024
+  timeStart: Wed May 29 21:11:30 2024
+  timeFinish: Wed May 29 21:26:35 2024
+  timeWait: 106 mins
+  timeBuild: 15 mins
+  timeTotal: 121 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.14-5
+  taskId: 61555943
+  timeCreate: Wed May 29 19:26:05 2024
+  timeStart: Wed May 29 21:11:32 2024
+  timeFinish: Wed May 29 21:19:36 2024
+  timeWait: 105 mins
+  timeBuild: 8 mins
+  timeTotal: 113 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-46
+  taskId: 61560270
+  timeCreate: Wed May 29 21:46:16 2024
+  timeStart: Wed May 29 23:12:07 2024
+  timeFinish: Wed May 29 23:15:57 2024
+  timeWait: 85 mins
+  timeBuild: 3 mins
+  timeTotal: 89 mins
