chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12634,3 +12634,21 @@
   timeWait: 85 mins
   timeBuild: 3 mins
   timeTotal: 89 mins
+- name: devspaces-operator
+  tag: 3.14-8
+  taskId: 61560895
+  timeCreate: Thu May 30 02:12:48 2024
+  timeStart: Thu May 30 03:36:59 2024
+  timeFinish: Thu May 30 03:56:03 2024
+  timeWait: 84 mins
+  timeBuild: 19 mins
+  timeTotal: 103 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-47
+  taskId: 61564294
+  timeCreate: Thu May 30 04:31:03 2024
+  timeStart: Thu May 30 06:19:52 2024
+  timeFinish: Thu May 30 06:24:38 2024
+  timeWait: 108 mins
+  timeBuild: 4 mins
+  timeTotal: 113 mins
