--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -535,11 +535,11 @@
       },
       "3.15": {
         "CSV_VERSION": "3.15.0",
-        "CSV_VERSION_PREV": "3.13.0"
+        "CSV_VERSION_PREV": "3.14.0"
       },
       "3.x": {
         "CSV_VERSION": "3.15.0",
-        "CSV_VERSION_PREV": "3.13.0"
+        "CSV_VERSION_PREV": "3.14.0"
       }
     }
   },
@@ -547,13 +547,13 @@
     "Errata": {
       "3.13": "129116",
       "3.14": "131099",
-      "3.15": "n/a",
+      "3.15": "133247",
       "3.x": "n/a"
     },
     "Epic": {
       "3.13": "CRW-6008",
       "3.14": "CRW-6294",
-      "3.15": "n/a",
+      "3.15": "CRW-6593",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
