--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12715,3 +12715,111 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.14-8.1717552842
+  taskId: 61686475
+  timeCreate: Wed Jun 5 02:00:42 2024
+  timeStart: Wed Jun 5 02:00:58 2024
+  timeFinish: Wed Jun 5 02:58:29 2024
+  timeWait: 0 mins
+  timeBuild: 57 mins
+  timeTotal: 57 mins
+- name: devspaces-udi-rhel8
+  tag: 3.14-6.1717552885
+  taskId: 61686492
+  timeCreate: Wed Jun 5 02:01:25 2024
+  timeStart: Wed Jun 5 02:01:44 2024
+  timeFinish: Wed Jun 5 02:58:57 2024
+  timeWait: 0 mins
+  timeBuild: 57 mins
+  timeTotal: 57 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.14-13.1717553425
+  taskId: 61686730
+  timeCreate: Wed Jun 5 02:10:25 2024
+  timeStart: Wed Jun 5 02:10:52 2024
+  timeFinish: Wed Jun 5 02:35:31 2024
+  timeWait: 0 mins
+  timeBuild: 24 mins
+  timeTotal: 25 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.14-57.1717642189
+  taskId: 61719314
+  timeCreate: Thu Jun 6 02:49:49 2024
+  timeStart: Thu Jun 6 02:50:50 2024
+  timeFinish: Thu Jun 6 03:02:38 2024
+  timeWait: 1 mins
+  timeBuild: 11 mins
+  timeTotal: 12 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.14-8.1717642232
+  taskId: 61719323
+  timeCreate: Thu Jun 6 02:50:32 2024
+  timeStart: Thu Jun 6 02:50:51 2024
+  timeFinish: Thu Jun 6 03:51:43 2024
+  timeWait: 0 mins
+  timeBuild: 60 mins
+  timeTotal: 61 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.14-13.1717642273
+  taskId: 61719332
+  timeCreate: Thu Jun 6 02:51:13 2024
+  timeStart: Thu Jun 6 02:53:59 2024
+  timeFinish: Thu Jun 6 03:21:00 2024
+  timeWait: 2 mins
+  timeBuild: 27 mins
+  timeTotal: 29 mins
+- name: devspaces-udi-rhel8
+  tag: 3.14-6.1717644784
+  taskId: 61719891
+  timeCreate: Thu Jun 6 03:33:04 2024
+  timeStart: Thu Jun 6 03:35:10 2024
+  timeFinish: Thu Jun 6 04:35:03 2024
+  timeWait: 2 mins
+  timeBuild: 59 mins
+  timeTotal: 61 mins
+- name: devspaces-server-rhel8
+  tag: 3.14-8.1717644785
+  taskId: 61719892
+  timeCreate: Thu Jun 6 03:33:05 2024
+  timeStart: Thu Jun 6 03:35:11 2024
+  timeFinish: Thu Jun 6 03:43:49 2024
+  timeWait: 2 mins
+  timeBuild: 8 mins
+  timeTotal: 10 mins
+- name: devspaces-operator
+  tag: 3.14-8.1717644786
+  taskId: 61719893
+  timeCreate: Thu Jun 6 03:33:06 2024
+  timeStart: Thu Jun 6 03:35:11 2024
+  timeFinish: Thu Jun 6 03:52:09 2024
+  timeWait: 2 mins
+  timeBuild: 16 mins
+  timeTotal: 19 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.14-4.1717644787
+  taskId: 61719896
+  timeCreate: Thu Jun 6 03:33:07 2024
+  timeStart: Thu Jun 6 03:35:12 2024
+  timeFinish: Thu Jun 6 03:46:58 2024
+  timeWait: 2 mins
+  timeBuild: 11 mins
+  timeTotal: 13 mins
+- name: devspaces-udi-rhel8
+  tag: 3.14-6.1717667644
+  taskId: 61729342
+  timeCreate: Thu Jun 6 09:54:04 2024
+  timeStart: Thu Jun 6 09:55:55 2024
+  timeFinish: Thu Jun 6 10:54:33 2024
+  timeWait: 1 mins
+  timeBuild: 58 mins
+  timeTotal: 60 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-51
+  taskId: 61835935
+  timeCreate: Tue Jun 11 03:23:19 2024
+  timeStart: Tue Jun 11 03:24:06 2024
+  timeFinish: Tue Jun 11 03:27:58 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
