chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12445,3 +12445,12 @@
   timeWait: 109 mins
   timeBuild: 4 mins
   timeTotal: 113 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-5
+  taskId: 61965472
+  timeCreate: Sat Jun 15 11:08:06 2024
+  timeStart: Sat Jun 15 11:08:56 2024
+  timeFinish: Sat Jun 15 11:12:40 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
