--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12472,3 +12472,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-8
+  taskId: 62284959
+  timeCreate: Mon Jul 1 14:29:20 2024
+  timeStart: Mon Jul 1 14:29:43 2024
+  timeFinish: Mon Jul 1 14:33:35 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
