--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12526,6 +12526,15 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-udi-rhel8
+  tag: 3.15-2
+  taskId: 62293468
+  timeCreate: Tue Jul 2 03:42:49 2024
+  timeStart: Tue Jul 2 03:43:29 2024
+  timeFinish: Tue Jul 2 04:37:43 2024
+  timeWait: 0 mins
+  timeBuild: 54 mins
+  timeTotal: 54 mins
 - name: devspaces-machineexec-rhel8
   tag: 3.15-2
   taskId: 62293469
@@ -12550,6 +12559,15 @@
   timeCreate: Tue Jul 2 00:07:45 2024
   timeStart: Tue Jul 2 00:08:10 2024
   timeFinish: Tue Jul 2 00:11:46 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-11
+  taskId: 62294423
+  timeCreate: Tue Jul 2 05:01:16 2024
+  timeStart: Tue Jul 2 05:01:33 2024
+  timeFinish: Tue Jul 2 05:05:29 2024
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
