--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12571,3 +12571,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.15-14
+  taskId: 62300725
+  timeCreate: Tue Jul 2 10:46:05 2024
+  timeStart: Tue Jul 2 10:51:05 2024
+  timeFinish: Tue Jul 2 11:00:57 2024
+  timeWait: 5 mins
+  timeBuild: 9 mins
+  timeTotal: 14 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-12
+  taskId: 62302653
+  timeCreate: Tue Jul 2 11:42:23 2024
+  timeStart: Tue Jul 2 11:51:46 2024
+  timeFinish: Tue Jul 2 11:55:50 2024
+  timeWait: 9 mins
+  timeBuild: 4 mins
+  timeTotal: 13 mins
