--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12661,3 +12661,21 @@
   timeWait: 44 mins
   timeBuild: 4 mins
   timeTotal: 49 mins
+- name: devspaces-code-rhel8
+  tag: 3.15-3
+  taskId: 62368274
+  timeCreate: Thu Jul 4 06:37:37 2024
+  timeStart: Thu Jul 4 06:38:08 2024
+  timeFinish: Thu Jul 4 11:43:14 2024
+  timeWait: 0 mins
+  timeBuild: 305 mins
+  timeTotal: 305 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-17
+  taskId: 62374686
+  timeCreate: Thu Jul 4 11:50:28 2024
+  timeStart: Thu Jul 4 11:51:26 2024
+  timeFinish: Thu Jul 4 11:54:56 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
