--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -10,8 +10,8 @@ components:
       cpuRequest: 100m
       cpuLimit: 2000m
       volumeMounts:
-        - name: images
-          path: /home/user/.local
+        - name: local
+          path: /home/user/.local/
       env:
         - name: CONCURRENTLY_OPTS
           value: -m 1
@@ -20,9 +20,9 @@ components:
           exposure: internal
           protocol: https
           targetPort: 5432
-  - name: images
-    volume:
-      size: 40Gi
+  - volume:
+      ephemeral: true
+    name: local
 commands:
   - id: podman-login
     exec:
