--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12796,3 +12796,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-idea-rhel8
+  tag: 3.15-5
+  taskId: 62611192
+  timeCreate: Mon Jul 15 17:15:19 2024
+  timeStart: Mon Jul 15 17:15:40 2024
+  timeFinish: Mon Jul 15 17:30:57 2024
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 15 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-24
+  taskId: 62611585
+  timeCreate: Mon Jul 15 17:37:26 2024
+  timeStart: Mon Jul 15 17:38:04 2024
+  timeFinish: Mon Jul 15 17:42:26 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
