--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12814,3 +12814,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-operator
+  tag: 3.15-10
+  taskId: 62613176
+  timeCreate: Mon Jul 15 14:41:34 2024
+  timeStart: Mon Jul 15 14:41:55 2024
+  timeFinish: Mon Jul 15 15:01:53 2024
+  timeWait: 0 mins
+  timeBuild: 19 mins
+  timeTotal: 20 mins
+- name: devspaces-operator-bundle
+  tag: 3.15-25
+  taskId: 62614141
+  timeCreate: Mon Jul 15 15:14:33 2024
+  timeStart: Mon Jul 15 15:25:27 2024
+  timeFinish: Mon Jul 15 15:30:36 2024
+  timeWait: 10 mins
+  timeBuild: 5 mins
+  timeTotal: 16 mins
