--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12490,3 +12490,111 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-udi-rhel8
+  tag: 3.16-1
+  taskId: 62229183
+  timeCreate: Wed Jun 26 23:34:39 2024
+  timeStart: Wed Jun 26 23:41:09 2024
+  timeFinish: Thu Jun 27 00:38:14 2024
+  timeWait: 6 mins
+  timeBuild: 57 mins
+  timeTotal: 63 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.16-8
+  taskId: 62490886
+  timeCreate: Wed Jul 10 08:47:21 2024
+  timeStart: Wed Jul 10 08:47:53 2024
+  timeFinish: Wed Jul 10 09:10:56 2024
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 23 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.16-7
+  taskId: 62678988
+  timeCreate: Wed Jul 17 14:31:55 2024
+  timeStart: Wed Jul 17 14:32:47 2024
+  timeFinish: Wed Jul 17 15:29:29 2024
+  timeWait: 0 mins
+  timeBuild: 56 mins
+  timeTotal: 57 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.16-2
+  taskId: 62754328
+  timeCreate: Fri Jul 19 12:10:09 2024
+  timeStart: Fri Jul 19 12:10:41 2024
+  timeFinish: Fri Jul 19 12:17:51 2024
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-server-rhel8
+  tag: 3.16-6
+  taskId: 62761633
+  timeCreate: Fri Jul 19 16:32:21 2024
+  timeStart: Fri Jul 19 16:32:53 2024
+  timeFinish: Fri Jul 19 16:40:32 2024
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-idea-rhel8
+  tag: 3.16-1
+  taskId: 62763170
+  timeCreate: Fri Jul 19 17:37:51 2024
+  timeStart: Fri Jul 19 17:37:54 2024
+  timeFinish: Fri Jul 19 17:52:51 2024
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.16-2
+  taskId: 62767789
+  timeCreate: Fri Jul 19 21:15:49 2024
+  timeStart: Fri Jul 19 21:16:23 2024
+  timeFinish: Fri Jul 19 21:31:19 2024
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-code-rhel8
+  tag: 3.16-13
+  taskId: 62768286
+  timeCreate: Fri Jul 19 21:37:13 2024
+  timeStart: Fri Jul 19 21:37:51 2024
+  timeFinish: Sat Jul 20 02:24:23 2024
+  timeWait: 0 mins
+  timeBuild: 286 mins
+  timeTotal: 287 mins
+- name: devspaces-operator
+  tag: 3.16-2
+  taskId: 62785539
+  timeCreate: Sun Jul 21 15:06:44 2024
+  timeStart: Sun Jul 21 15:07:29 2024
+  timeFinish: Sun Jul 21 15:27:00 2024
+  timeWait: 0 mins
+  timeBuild: 19 mins
+  timeTotal: 20 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-39
+  taskId: 62787098
+  timeCreate: Sun Jul 21 22:24:47 2024
+  timeStart: Sun Jul 21 22:25:20 2024
+  timeFinish: Sun Jul 21 22:34:04 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.16-1
+  taskId: 62810573
+  timeCreate: Mon Jul 22 20:21:21 2024
+  timeStart: Mon Jul 22 20:21:22 2024
+  timeFinish: Mon Jul 22 20:48:25 2024
+  timeWait: 0 mins
+  timeBuild: 27 mins
+  timeTotal: 27 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-1
+  taskId: 62811600
+  timeCreate: Mon Jul 22 20:55:06 2024
+  timeStart: Mon Jul 22 21:01:09 2024
+  timeFinish: Mon Jul 22 21:07:51 2024
+  timeWait: 6 mins
+  timeBuild: 6 mins
+  timeTotal: 12 mins
