--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12598,3 +12598,21 @@
   timeWait: 6 mins
   timeBuild: 6 mins
   timeTotal: 12 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.16-40
+  taskId: 62814222
+  timeCreate: Mon Jul 22 22:24:01 2024
+  timeStart: Mon Jul 22 22:40:39 2024
+  timeFinish: Mon Jul 22 22:51:51 2024
+  timeWait: 16 mins
+  timeBuild: 11 mins
+  timeTotal: 27 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-2
+  taskId: 62814827
+  timeCreate: Mon Jul 22 22:58:51 2024
+  timeStart: Mon Jul 22 22:59:09 2024
+  timeFinish: Mon Jul 22 23:02:57 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
