--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12616,3 +12616,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.16-1
+  taskId: 62823478
+  timeCreate: Tue Jul 23 04:26:24 2024
+  timeStart: Tue Jul 23 04:27:14 2024
+  timeFinish: Tue Jul 23 04:41:32 2024
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-3
+  taskId: 62824031
+  timeCreate: Tue Jul 23 04:48:18 2024
+  timeStart: Tue Jul 23 04:48:40 2024
+  timeFinish: Tue Jul 23 04:52:49 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
