--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12634,3 +12634,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-server-rhel8
+  tag: 3.16-7
+  taskId: 62824633
+  timeCreate: Tue Jul 23 05:06:02 2024
+  timeStart: Tue Jul 23 05:06:28 2024
+  timeFinish: Tue Jul 23 05:14:27 2024
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.16-4
+  taskId: 62825371
+  timeCreate: Tue Jul 23 05:32:18 2024
+  timeStart: Tue Jul 23 05:32:32 2024
+  timeFinish: Tue Jul 23 05:37:54 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
